[tool.poetry]
name = "pawfect-pair-be"
version = "0.1.0"
description = ""
authors = ["George Tsekouras <tsekouras.gt@gmail.com>"]
readme = "README.md"
packages = [{include = "pawfect_pair_be"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
